实现从原始数据过滤出正确数据落地到HBase中，并映射到Phoenix，实现一些常用的指标统计

--- a/Flink车联网/0 项目测试及注意事项.md
+++ b/Flink车联网/0 项目测试及注意事项.md
@@ -39,3 +39,39 @@ hdfs fsck  /  -delete
 
 第一个条件在代码里指定了，所以想要重复测试的话，只需要修改conf.properties里的consumer_groupid为一个全新的id即可
 
+**或者使用KafkaTool删除kafka数据主题还有_consumer_offsets这个主题，然后重新运行flink程序读取到kafka分区，在删除掉分区及数据以后，要重启kafka集群(慎用)**
+
+
+
+## HBase
+
+在开发完正确数据写入HBase后，启动idea代码测试的时候，要先启动HDFS，Zookeeper，Kafka，HBase，然后通过命令hbase shell进入hbase的命令交互行创建表
+
+```sql
+#结尾没有分号
+create 'vehicle_rightdata','cf'
+```
+
+![Snipaste_2022-11-26_22-47-49](assets\Snipaste_2022-11-26_22-47-49.png)
+
+然后在hbase shell里输入
+
+```sql
+scan 'vehicle_rightdata'
+```
+
+可以看到远远不断的数据写进来
+
+针对原始数据实时ETL落地hbase，**设置好预分区，解决数据热点问题**，当已知rowkey的值的时候，设置预分区可以根据rowkey的区间进行分区
+
+```
+create 'vehicle_rightdata','cf',{SPLITS => ['10000','50000']}
+```
+
+针对hbase优化，可以从数据写入方式，预分区，预写日志等方面着手，可以通过**数据写入hbase合理使用压缩与编码**在同一磁盘空间上，存储更多的数据
+
+```sql
+1.alter 'vehicle_rightdata', { NAME => 'cf', DATA_BLOCK_ENCODING => 'FAST_DIFF' }
+2.alter 'vehicle_rightdata',{NAME => 'cf',COMPRESSION => 'gz'}
+```
+
