--- a/Flink车联网/2 实时数据落地.md
+++ b/Flink车联网/2 实时数据落地.md
@@ -106,3 +106,137 @@ SinkFunction接口:
   7 获得当前输入记录的timestamp
 ```
 
+开发实现步骤
+
+StreamingAnalysis模块com.lhq.Streaming.Sink.ToHBaseSink
+
+```properties
+1.创建 SrcDataToHBaseSink类继承 RichSinkFunction<ItcastDataObj>
+2.创建一个有参数-表名的构造方法
+3.重写open方法
+  3.1 从上下文获取到全局的参数
+  3.2 设置hbase的配置，Zookeeper Quorum集群和端口和TableInputFormat的输入表
+  3.3 通过连接工厂创建连接
+  3.4 通过连接获取表对象
+4.重写close方法
+  4.1 关闭hbase 表和连接资源
+5. 重写 invoke 方法，将读取的数据写入到 hbase
+  5.1 setDataSourcePut输入参数value，返回put对象
+6. 实现 setDataSourcePut 方法
+  6.1 如何设计rowkey VIN+时间戳翻转
+  6.2 定义列簇的名称
+  6.3 通过 rowkey 实例化 put
+  6.4 将所有的字段添加到put的字段中
+```
+
+### 写入HBase的优化
+
+使用BufferedMutator通过mutate方法提交数据到缓冲区
+
+StreamingAnalysis模块com.lhq.Streaming.Sink.ToHBaseSinkOptimize
+
+优化代码：
+
+![Snipaste_2022-11-26_22-57-40](assets\Snipaste_2022-11-26_22-57-40.png)
+
+测试结果看项目测试及注意事项
+
+### Phoenix集成HBase
+
+将写入Hbase表的数据通过Phoenix映射，可以在phoenix中通过使用sql语句操作hbase表，在上面的测试之前我们已经在hbase中创建了对应的表vehicle_rightdata，并且列簇是cf，现在可以根据我放在项目脚本下的Phoenix中运行的脚本，在Phoenix中创建好对应的二级索引表和视图，还有索引
+
+### 车辆常用明细数据
+
+phoenix只适合做明细查询和历史查询，不适合多维度统计，sql优化查询，所以我们从原始数据中抽取常用的车辆指标分析数据落地hbase与phoenix建立关联视图，通过phoenix查询明细，因此行主键(rowKey)、车架号(vin)、终端时间(terminalTime)、存储时间(processTime)
+
+```properties
+常用指标:
+电量百分比(currentElectricity)、当前电量(remainPower)、百公里油耗(fuelConsumption100km)、发动机速度(engineSpeed)、车辆速度(vehicleSpeed)
+```
+
+在hbase中创建车辆明细数据表及视图(项目脚本下Phoenix中运行脚本文件里)
+
+### 车辆明细数据统计
+
+将hbase中vehicle_rightdata_detail表的明细数据映射到phoenix中以后，我们可以实现一些明细的指标的统计
+
+#### 车辆总数统计
+
+- 统计车辆明细总数(某天某时刻明细数据)
+
+  - 每辆车每天采集多条数据，因此需要对车辆进行去重，采集过数据的车辆只计数一次，车辆唯一标识为vin，因此对vin进行去重统计总数即可(数据是真是企业的数据，时间比较久了点)
+
+    ```sql
+    select count(distinct("vin")) totalVehicleNum from "itcastsrc_vehicle_detail" where "terminalTime" like '2019-11-20 15%';
+    ```
+
+- 统计每天在线的车辆总数
+
+  - 以天为维度统计车辆数，基于“总的采集数据车辆数”统计，增加按天分组
+
+  - 需要用到vin，terminalTime
+
+    ```sql
+    select count(1) dayTotalNum, SUBSTR("terminalTime", 0,10)  from "itcastsrc_vehicle_detail" group by SUBSTR("terminalTime", 0,10);
+    ```
+
+#### 车辆电量统计
+
+- 统计车辆电量百分比
+
+  - 统计车辆最大、最小电量百分比，需要用到vin,currentElectricity
+
+  - 单位：百分比
+
+    ```sql
+    select "vin", max("currentElectricity") as "maxValue", min("currentElectricity") as "minValue" from "itcastsrc_vehicle_detail" where "currentElectricity" is not null group by "vin";
+    ```
+
+- 统计当前电量
+
+  - 统计用到的字段remainPower
+  - 单位：百分比(已乘以100)
+  - 当前电量求平均
+  - to_number("value") 把字符串类型或日期类型转换成数值类型
+
+  ```sql
+  select "vin", avg(to_number("remainPower")) avgRemainPower from "itcastsrc_vehicle_detail" where "terminalTime" like '2019-11-20%' and "remainPower" is not null group by "vin";
+  ```
+
+#### 车辆油耗统计
+
+- 统计车辆百公里油耗
+
+  - 统计用到的字段fuelConsumption100km
+
+  - 统计每辆车的百公里油耗
+
+    - 电动车为何还有油耗
+
+    - 一辆普通的燃油汽车和一辆电动汽车行驶相同的距离，需要的能量是相同的,根据汽车动能计算出行驶百公里耗电量得出油耗
+
+      ```sql
+      select distinct("vin") distinctVin, "fuelConsumption100km" from "itcastsrc_vehicle_detail" where "terminalTime" like '2019-11-20%' and "fuelConsumption100km" is not null group by "vin","fuelConsumption100km";
+      ```
+
+#### 车辆速度统计
+
+- 统计车辆发动机速度
+
+  - 统计使用字段engineSpeed
+
+  - 求最大、最小、平均车速
+
+    ```sql
+    select "vin", max("engineSpeed") maxEngineSpeed, min("engineSpeed") minEngineSpeed, avg(to_number("engineSpeed")) avgEngineSpeed from "itcastsrc_vehicle_detail" where "terminalTime" like '2019-11-20%' and "engineSpeed" is not null group by "vin";
+    ```
+
+- 统计车辆速度vehicleSpeed
+
+  - 求最大、最小、平均车速
+
+    ```sql
+    select "vin", max("vehicleSpeed") maxVehicleSpeed, min("vehicleSpeed") minVehicleSpeed, avg(to_number("vehicleSpeed")) avgVehicleSpeed from "itcastsrc_vehicle_detail" where "terminalTime" like '2019-11-20%' and "vehicleSpeed" is not null group by "vin";
+    ```
+
+    
