解决图片看不到问题

--- a/Flink车联网/0 项目测试及注意事项.md
+++ b/Flink车联网/0 项目测试及注意事项.md
@@ -18,15 +18,15 @@ hdfs fsck  /  -delete
 
 在代码第一次测试成功以后.
 
-![Snipaste_2022-11-20_19-18-45](assets\Snipaste_2022-11-20_19-18-45.png)
+![Snipaste_2022-11-20_19-18-45](assets/Snipaste_2022-11-20_19-18-45.png)
 
 并且HDFS上也有数据文件生成
 
-![Snipaste_2022-11-20_19-19-02](assets\Snipaste_2022-11-20_19-19-02.png)
+![Snipaste_2022-11-20_19-19-02](assets/Snipaste_2022-11-20_19-19-02.png)
 
 如果想要重复测试并且消费kafka分区里的同一份数据的话，就要修改conf.properties里的consumer_groupid，或者删除kafka分区，重新创建分区然后通过FlinkReadFromKafka方法重新将数据从HDFS上读取到Kafka里
 
-![Snipaste_2022-11-20_19-19-36](assets\Snipaste_2022-11-20_19-19-36.png)
+![Snipaste_2022-11-20_19-19-36](assets/Snipaste_2022-11-20_19-19-36.png)
 
 因为想要重复的消费数据就要满足两个条件：
 
@@ -52,7 +52,7 @@ hdfs fsck  /  -delete
 create 'vehicle_rightdata','cf'
 ```
 
-![Snipaste_2022-11-26_22-47-49](assets\Snipaste_2022-11-26_22-47-49.png)
+![Snipaste_2022-11-26_22-47-49](assets/Snipaste_2022-11-26_22-47-49.png)
 
 然后在hbase shell里输入
 
