--- a/Flink车联网/9 项目优化.md
+++ b/Flink车联网/9 项目优化.md
@@ -50,11 +50,11 @@ state.checkpoints.dir:hdfs://namenode:8082/flink/checkpoints
 
 l 正常情况：消息处理速度 >= 消息的发送速度，不发生消息拥堵，系统运行流畅
 
-![img](assets\wps4.jpg) 
+![img](assets/wps4.jpg) 
 
 l 异常情况：消息处理速度< 消息的发送速度，发生了消息拥堵，系统运行不畅
 
-![img](assets\wps5.jpg) 
+![img](assets/wps5.jpg) 
 
 #### 积压解决方案
 
@@ -70,19 +70,19 @@ Flink内部自动实现数据流自然降速，而无需担心数据丢失。Fli
 
 Flink1.5+ 版本引入了基于Credit的流控和反压机制，本质上是将TCP的流控机制从传输层提升到了应用层——InputGate和ResultPartition的层级，从而避免传输层造成阻塞。
 
-![img](assets\wps6.jpg) 
+![img](assets/wps6.jpg) 
 
 仍然是Sender发送速度与Receiver接收速度的比是2:1的情景。Sender端的ResultSubPartition积压了2个缓存的数据，因此会将该批次要发送的数据与backlog size = 2一同发往Receiver。
 
 Receiver收到当前批数据和backlog size之后，会计算InputChannel是否有足够的缓存来接收下一批数据，如果不够，则会去LocalBufferPool/NetworkBufferPool申请缓存，并将credit = 3通知到上游的ResultSubPartition，表示自己能够接收3个缓存的消息。
 
-![img](assets\wps7.jpg) 
+![img](assets/wps7.jpg) 
 
 随着Receiver端的数据不断积压，网络缓存最终被耗尽，因此会反馈给上游credit = 0（相当于TCP滑动窗口中的window = 0），Sender端ResultPartition到Netty的链路会被阻断。按照上一节所述的流程，Sender端的网络缓存会被更快地耗尽，RecordWriter不能再写数据，从而达到反压的效果。
 
 背后的原理：
 
-![img](assets\wps8.jpg) 
+![img](assets/wps8.jpg) 
 
 - TaskManager（TM）启动时，会初始化网络缓冲池（NetworkBufferPool）
 
@@ -129,7 +129,7 @@ Streaming File Sink 会将数据写入到桶中。由于输入流可能是无界
 
 **重要: 使用 StreamingFileSink 时需要启用 Checkpoint ，每次做 Checkpoint 时写入完成。如果 Checkpoint 被禁用，部分文件（part file）将永远处于 'in-progress' 或 'pending' 状态，下游系统无法安全地读取。**
 
-![img](assets\wps9.jpg) 
+![img](assets/wps9.jpg) 
 
 理解：
 
@@ -290,7 +290,7 @@ BufferedMutator错误处理:
 
 **使用BufferedMutator数据写与直接写数据到hbase的区别：**
 
-![Snipaste_2022-11-22_22-49-54](assets\Snipaste_2022-11-22_22-49-54.png)
+![Snipaste_2022-11-22_22-49-54](assets/Snipaste_2022-11-22_22-49-54.png)
 
 ### 数据写入HBase进行预分区
 
